--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-hey there
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MindCraft Learning
+</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f9fa;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header {
+      background: #007bff;
+      color: white;
+      padding: 20px;
+      width: 100%;
+      text-align: center;
+    }
+
+    main {
+      padding: 40px 20px;
+      max-width: 800px;
+      text-align: center;
+    }
+
+    a.play-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #28a745;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    a.play-button:hover {
+      background-color: #218838;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: #777;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to MindCraft Learning</h1>
+    <p>Official Developer Website</p>
+  </header>
+
+  <main>
+    <h2>🚀 Trivia Quest AI</h2>
+    <p>The ultimate quiz app to challenge your brain and have fun with smart AI-generated questions!</p>
+    <a href="https://play.google.com/store/apps/details?id=com.coderespite.triviaquestai" class="play-button" target="_blank">
+      Get it on Google Play
+    </a>
+  </main>
+
+  <footer>
+    &copy; 2025 CodeRespite. All rights reserved.
+  </footer>
+</body>
+</html>
