--- a/index.html
+++ b/index.html
@@ -3,64 +3,72 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="MindCraft Learning - Explore creative and educational apps by a passionate developer." />
-  <meta name="keywords" content="developer, apps, learning, coding, MindCraft Learning" />
-  <meta name="author" content="Your Name" />
-  <title>MindCraft Learning | Developer Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" />
-</head>
+  <title>MindCraft Learning
+</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f9fa;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
+    header {
+      background: #007bff;
+      color: white;
+      padding: 20px;
+      width: 100%;
+      text-align: center;
+    }
+
+    main {
+      padding: 40px 20px;
+      max-width: 800px;
+      text-align: center;
+    }
+
+    a.play-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #28a745;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    a.play-button:hover {
+      background-color: #218838;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: #777;
+      font-size: 14px;
+    }
+  </style>
+</head>
 <body>
-  <!-- Header / Hero Section -->
   <header>
-    <div class="hero">
-      <h1>MindCraft Learning</h1>
-      <p>Explore smart, creative, and educational apps built with passion.</p>
-      <a href="#projects" class="btn">See My Apps</a>
-    </div>
+    <h1>Welcome to MindCraft Learning</h1>
+    <p>Official Developer Website</p>
   </header>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a full-stack developer passionate about building tools that enhance learning and productivity. I believe in clean code, intuitive design, and solving real-world problems through apps.</p>
-  </section>
+  <main>
+    <h2>🚀 Trivia Quest AI</h2>
+    <p>The ultimate quiz app to challenge your brain and have fun with smart AI-generated questions!</p>
+    <a href="https://play.google.com/store/apps/details?id=com.coderespite.triviaquestai" class="play-button" target="_blank">
+      Get it on Google Play
+    </a>
+  </main>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>My Apps</h2>
-    
-    <div class="project">
-      <img src="app1.png" alt="App 1 Screenshot" />
-      <h3>StudyBuddy</h3>
-      <p>A Pomodoro-based focus app with a local notes feature and motivational quotes.</p>
-      <p><strong>Tech:</strong> React, Firebase</p>
-      <a href="https://yourapp1link.com" target="_blank">View App</a>
-    </div>
-
-    <div class="project">
-      <img src="app2.png" alt="App 2 Screenshot" />
-      <h3>QuizMate</h3>
-      <p>An interactive quiz app for competitive exams like BPSC and UPSC.</p>
-      <p><strong>Tech:</strong> PHP, MySQL, JS</p>
-      <a href="https://yourapp2link.com" target="_blank">View App</a>
-    </div>
-
-    <!-- Add more apps as needed -->
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Have questions or want to collaborate?</p>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-  </section>
-
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 MindCraft Learning. All rights reserved.</p>
+    &copy; 2025 CodeRespite. All rights reserved.
   </footer>
 </body>
 </html>
